--- a/demo/res/layout/main.xml
+++ b/demo/res/layout/main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:parcel="http://schemas.android.com/apk/res/com.commonsware.cwac.colormixer.demo"
+  xmlns:mixer="http://schemas.android.com/apk/res-auto"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical"
@@ -13,6 +13,7 @@
     android:id="@+id/mixer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    mixer:color="#FFFF00FF"
   />
   <Button
     android:layout_width="wrap_content"
