replaced color with cwac_colormixer_color, Gradle improvements

--- a/colormixer/res/values/cwac_colormixer_attrs.xml
+++ b/colormixer/res/values/cwac_colormixer_attrs.xml
@@ -1,5 +1,5 @@
 <resources>
   <declare-styleable name="ColorMixer">
-    <attr name="color" format="color" />
+    <attr name="cwac_colormixer_color" format="color" />
   </declare-styleable>
 </resources>
