--- a/demo/res/layout/main.xml
+++ b/demo/res/layout/main.xml
@@ -13,7 +13,7 @@
     android:id="@+id/mixer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    mixer:color="#FFFF00FF"
+    mixer:cwac_colormixer_color="#FFFF00FF"
   />
   <Button
     android:layout_width="wrap_content"
